# lazy-context-filtering-mcp

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.engine  README.md  bug-log.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: .gitignore  CLAUDE.md  CLAUDE.planning.md  project-config.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
.spec/: design.md  plan.md  requirements.md  tasks.md
.spec/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md
docs/: code-review-report.md
src/dashboard/: index.html  tsconfig.json  vite.config.ts
src/engine/: __init__.py  filter.py  main.py  models.py  scorer.py  summarizer.py  tokenizer.py
src/server/: api.search.test.ts  api.ts  cache.ts  circuit-breaker.ts  db.ts  engine-client.ts  index.ts  logger.ts  memory-store.ts  session.ts  store-factory.test.ts  store-factory.ts  store-utils.test.ts  store-utils.ts  store.ts  token-counter.ts  types.ts
src/shared/: config-schema.test.ts  config-schema.ts
supabase/migrations/: 001_initial.sql
tests/dashboard/: test_app_navigation.test.tsx  test_config_page.test.tsx  test_context_page.test.tsx
tests/e2e/: test_full_workflow.test.ts  test_full_workflow.ts  test_sessions_workflow.test.ts  test_sessions_workflow.ts
tests/engine/: test_filter.py  test_health.py  test_models.py  (+3 more)
(+47 files in other folders)
