[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy-context-filtering-engine"
version = "0.1.0"
description = "Python scoring engine for lazy context filtering MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn[standard]>=0.34.0",
  "scikit-learn>=1.6.1",
  "tiktoken>=0.9.0",
  "pydantic>=2.11.1",
  "pytest>=8.3.5",
  "httpx>=0.28.1",
  "pytest-asyncio>=0.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["engine*"]
